# firework

./: .dockerignore  .gitignore  Cargo.toml  Makefile  Makefile.old  README.md  config.diff
firework/: Dockerfile  README.md  bench.sh  config.json  config_vm.json  go.mod  go.sum  k8s.md  main.go  nohup.out  usage.tape
firework-dev/: .gitignore  Dockerfile  Dockerfile.k8s  Dockerfile.minimal  Dockerfile.tools  README.md  debootstrap.sh  install_kubeadm_prerequisites.sh  mkrootfs-docker.sh  mkrootfs-systemd-kubeadm.sh  mkrootfs-systemd.sh  mkrootfs.sh  overlay-init  post-init.service
firework-dev/docker/: Dockerfile
firework-dev/k8s/: config.toml
firework-dev/kernel/: .config  .config.old
firework-dev/squashfs/: .dockerignore  Dockerfile.k8s  Makefile  fwagent.service  mkrootfs-minimal.sh  mkrootfs-tools.sh  mkrootfs.sh
firework-dev/squashfs/k8s/: Dockerfile.k8s  install_kubeadm_prerequisites.sh
firework-dev/squashfs/minimal/: Dockerfile.minimal
firework-dev/squashfs/tools/: Dockerfile.tools
firework/assets/: .gitignore  .vimrc  README.md  ensure.sh  mkinitrd.sh  mkrootfs.sh  overlay-init
firework/assets/initrd/: init
firework/cli/: commands.go  root.go
firework/cmd/cleanup/: cleanup.go
firework/cmd/connect/: connect.go
firework/cmd/logs/: logs.go
firework/cmd/start/: config.go  download.go  env.go  fs.go  overlay.go  rootfs.go  start.go
firework/cmd/status/: status.go
firework/cmd/stop/: stop.go
firework/docker/: Dockerfile  README.md
firework/internal/config/: config.go  const.go  paths.go
firework/internal/ipam/: ipam.go
firework/internal/network/: bridge.go  network.go
firework/internal/vm/: firecracker.go  group.go  machine.go  utils.go
firework/mmds/: server.go
firework/sh/: Dockerfile  Dockerfile.alpine  Dockerfile.alpine.backup  Dockerfile.distroless  ensure-vm.sh  ensure.sh  firecracker-cleanup.sh  firecracker.sh  macgen.py  mkrootfs-vm.sh  mkrootfs.bkp.sh  net-cleanup.sh  setup-host-vm.sh  setup-host.sh  vars.sh
firework/sh/config/: buildkitd.service  dnsmasq@.service  local.conf
firework/sh/vm/: Dockerfile
firework/sources/: sources.go
fwagent/: Cargo.toml  README.md
fwagent/src/: main.rs
init/: Cargo.toml
init/src/: main.rs
post-init/: Cargo.toml
post-init/src/: main.rs
ptyca/: Cargo.toml
ptyca/src/: lib.rs
vsock-client/: Cargo.toml
vsock-client/src/: main.rs
