[package]
name = "fwagent"
version = "0.1.0"
authors = ["jlkiri"]
edition = "2021"

[dependencies]
env_logger = "*"
log = "*"
serde_derive = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
anyhow = "*"
vsock = "0.3.0"
rustix = { version = "0.38.2", features = ["pty", "termios", "process", "system"] }
ptyca = { version = "0.1.0", path = "../ptyca" }
reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls", "json"], default-features = false }
nom = "7.1.3"

[profile.release]
lto = true
