[package]
name = "init"
version = "0.1.0"
authors = ["jlkiri"]
edition = "2018"

[dependencies]
libc = "*"
nix = "*"
env_logger = "*"
log = "*"
serde_derive = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
anyhow = "*"
thiserror = "*"
vsock = "0.3.0"
rustix = { version = "0.37.20", features = ["pty", "termios", "process"] }
ptyca = { version = "0.1.0", path = "../ptyca" }
reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls"], default-features = false }

[profile.release]
lto = true

# [patch.crates-io]
# tokio-vsock = { git = "https://github.com/jeromegn/tokio-vsock.git", branch = "fix-io-errors" }
