[package]
name = "init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.9"
env_logger = "0.10.1"
log = "0.4.20"
nix = { version = "0.27.1", features = ["process", "signal"] }
signal-hook = "0.3.17"
