[package]
name = "post-init"
version = "0.1.0"
authors = ["jlkiri"]
edition = "2018"

[dependencies]
libc = "*"
nix = "*"
env_logger = "*"
log = "*"
serde_derive = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
anyhow = "*"
thiserror = "*"
vsock = "0.3.0"
rustix = { version = "0.38.2", features = ["pty", "termios", "process", "system"] }
ptyca = { version = "0.1.0", path = "../ptyca" }
reqwest = { version = "0.11.18", features = ["blocking", "rustls-tls", "json"], default-features = false }
nom = "7.1.3"

[profile.release]
lto = true

# [patch.crates-io]
# tokio-vsock = { git = "https://github.com/jeromegn/tokio-vsock.git", branch = "fix-io-errors" }
