[package]
name = "vsock-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vsock = "0.3.0"
rustix = { version = "0.37.20", features = ["pty", "termios", "process"] }
ptyca = { version = "0.1.0", path = "../ptyca" }
